--- a/src/pages/Menus.css
+++ b/src/pages/Menus.css
@@ -1,3 +1,6 @@
+@import url('../components/Header.css');
+@import url('../components/Footer.css');
+
 :root {
   --primary-color: #001f3f;
   --secondary-color: #87CEFA;
@@ -17,7 +20,6 @@ body {
   color: #333;
 }
 
-/* Unique page content styles */
 .content {
   padding: 40px 60px;
   max-width: 900px;
@@ -93,7 +95,6 @@ p {
   cursor: pointer;
 }
 
-/* Dish styles */
 .dish {
   display: flex;
   margin-bottom: 20px;
@@ -117,4 +118,3 @@ p {
 .dish-info p {
   margin: 5px 0;
 }
-
